KSCM-2085 - Fixed the spacing issue between review proposal validation message and header.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69181 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -96,6 +96,10 @@ h3.uif-headerText a {
   width : 300px;
 }
 
+.ks-cm-reviewproposal-validation-spacing{
+  padding-top:25px
+}
+
 /* end */
 
 /* find course proposal start */
